Fix: No such css attribute as `align` + empty rule
Not clear what this was supposed to do, I'm going to assume that this
was supposed to be `text-align` as all the grid alignment css takes
centre / top / bottom and not left

Also remove an empty ruleset

--- a/app/assets/sass/accounts.scss
+++ b/app/assets/sass/accounts.scss
@@ -170,7 +170,7 @@
 }
 
 .payment-icon {
-    align: left;
+    text-align: left;
     width: 80px;
     height: 50px;
 }
